--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -66,12 +66,9 @@
   </div>
 
   <div class="full-width paragraph-gap-0">
-    <div class="back-to-top" (click)="backToTop()">
-      <img class="top-arrow" src="../../assets/icons/top-arrow.svg" />
-      <span class="text-bold"> Back to top</span>
-    </div>
+    <app-back-to-top></app-back-to-top>
     <app-footer></app-footer>
   </div>
 </div>
 
-<app-scroll-to-top class="scroll-to-top"></app-scroll-to-top>
+<app-scroll-to-top></app-scroll-to-top>
