--- a/src/app/threats/threats.component.html
+++ b/src/app/threats/threats.component.html
@@ -27,7 +27,7 @@
     </div>
   </div>
 
-  <div class="user-story">
+  <!-- <div class="user-story">
     <span class="title">The story goes like this...</span>
     <div class="stories">
       <div class="paragraph-gap-2">
@@ -55,9 +55,9 @@
         >
       </div>
     </div>
-  </div>
+  </div> -->
 
-  <div class="section">
+  <div class="research-personas">
     <div class="research">
       <div class="paragraph">
         <span class="title">Research</span>
@@ -89,7 +89,7 @@
           different role in the situation.
         </span>
       </div>
-      <div class="personas">
+      <!-- <div class="personas">
         <div class="persona">
           <div class="paragraph-gap-1">
             <span class="header">
@@ -163,7 +163,7 @@
             <span> Similar to defence officers. </span>
           </span>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 
@@ -193,88 +193,101 @@
   </div>
 
   <div class="problem-solutions">
-    <div class="para">
-      <div class="headers">
-        <span class="title">The Grouping Panel </span>
-      </div>
-      <div class="paragraph-gap-3">
-        <span class="problem text-bold">The problems I addressed were:</span>
-        <span class="para">
-          <span class="paragraph-gap-1">
-            <span class="colored-text">Hard to group from the map:</span>A
-            controller has a difficult job when threats are close together.
-          </span>
-          <span class="paragraph-gap-1">
-            <span class="colored-text">Manual grouping:</span>This is the main
-            task the controller has to do very quickly, and <br />the current
-            process takes 30 - 50 seconds.
-          </span>
-        </span>
-        <span class="solution text-bold">The solutions:</span>
-        <span class="para">
-          <span class="paragraph-gap-1">
-            <span class="colored-text">Minimizing the map:</span>
-            Once the side panel opens, the map narrows down so that no <br />
-            content can be hidden.
-          </span>
-          <span class="paragraph-gap-1">
-            <span class="colored-text">Grouping panel:</span>
-            <ul>
-              <li>
-                <span class="colored-text">Suggestions -</span> They save the
-                controller time. Grouping <br />from the panel takes 3-10
-                seconds.
-              </li>
-              <li>
-                <span class="colored-text">Alerts -</span> Same as displayed in
-                the dashboard, giving the <br />controller access to everything
-                they need in one place.
-              </li>
-            </ul>
-          </span>
-        </span>
-      </div>
+    <div class="headers show-mobile-header">
+      <span class="title">The Grouping Panel</span>
     </div>
-    <div class="images">
-      <img src="../../assets/threats/grouping-panel.svg " />
+    <div class="mobile-order">
+      <div class="para">
+        <div class="headers hide-mobile-header">
+          <span class="title">The Grouping Panel</span>
+        </div>
+        <div class="paragraph-gap-3">
+          <span class="problem text-bold">The problems I addressed were:</span>
+          <span class="para">
+            <span class="paragraph-gap-1">
+              <span class="colored-text">Hard to group from the map:</span>A
+              controller has a difficult job when threats are close together.
+            </span>
+            <span class="paragraph-gap-1">
+              <span class="colored-text">Manual grouping:</span>This is the main
+              task the controller has to do very quickly, and <br />the current
+              process takes 30 - 50 seconds.
+            </span>
+          </span>
+          <span class="solution text-bold">The solutions:</span>
+          <span class="para">
+            <span class="paragraph-gap-1">
+              <span class="colored-text">Minimizing the map:</span>
+              Once the side panel opens, the map narrows down so that no <br />
+              content can be hidden.
+            </span>
+            <span class="paragraph-gap-1">
+              <span class="colored-text">Grouping panel:</span>
+              <ul>
+                <li>
+                  <span class="colored-text">Suggestions -</span> They save the
+                  controller time. Grouping <br />from the panel takes 3-10
+                  seconds.
+                </li>
+                <li>
+                  <span class="colored-text">Alerts -</span> Same as displayed
+                  in the dashboard, giving the <br />controller access to
+                  everything they need in one place.
+                </li>
+              </ul>
+            </span>
+          </span>
+        </div>
+      </div>
+      <div class="images">
+        <img src="../../assets/threats/grouping-panel.svg " />
+      </div>
     </div>
   </div>
 
   <div class="problem-solutions dashboard">
-    <div class="images">
-      <img src="../../assets/threats/dashboard.svg  " />
-    </div>
-    <div class="para">
+    <div class="headers show-mobile-header">
       <span class="title">The Dashboard</span>
-      <div class="paragraph-gap-3">
-        <span class="problem text-bold">The problems I addressed were:</span>
-        <span class="para">
-          <span class="paragraph-gap-1">
-            <span class="colored-text">Minimal area:</span>The threat list area
-            wasn't large which made users have to <br />constantly scroll to
-            view all the threats on the list.
+    </div>
+    <div class="mobile-order">
+      <div class="para">
+        <div class="headers hide-mobile-header">
+          <span class="title">The Dashboard</span>
+        </div>
+        <div class="paragraph-gap-3">
+          <span class="problem text-bold">The problems I addressed were:</span>
+          <span class="para">
+            <span class="paragraph-gap-1">
+              <span class="colored-text">Minimal area:</span>The threat list
+              area wasn't large which made users have to <br />constantly scroll
+              to view all the threats on the list.
+            </span>
+            <span class="paragraph-gap-1">
+              <span class="colored-text">Missing alerts:</span>The old threat
+              panel showed alerts on top of a threat, and <br />since most of
+              the time they had to scroll to view the entire <br />threat list,
+              incoming alerts were easy to miss.
+            </span>
           </span>
-          <span class="paragraph-gap-1">
-            <span class="colored-text">Missing alerts:</span>The old threat
-            panel showed alerts on top of a threat, and <br />since most of the
-            time they had to scroll to view the entire <br />threat list,
-            incoming alerts were easy to miss.
+          <span class="solution text-bold">The solutions:</span>
+          <span class="para">
+            <span class="paragraph-gap-1">
+              <span class="colored-text">Dashboard:</span>
+              I used a separate screen from the main system to display the
+              <br />
+              dashboard. Now the users can view the map and their data
+              <br />both at the same time.
+            </span>
+            <span class="paragraph-gap-1">
+              <span class="colored-text">Alert Area:</span>The dashboard was
+              divided into 4 sections. <br />The right one provides space to
+              alert users, and offer them <br />choices about a given threat.
+            </span>
           </span>
-        </span>
-        <span class="solution text-bold">The solutions:</span>
-        <span class="para">
-          <span class="paragraph-gap-1">
-            <span class="colored-text">Dashboard:</span>
-            I used a separate screen from the main system to display the <br />
-            dashboard. Now the users can view the map and their data <br />both
-            at the same time.
-          </span>
-          <span class="paragraph-gap-1">
-            <span class="colored-text">Alert Area:</span>The dashboard was
-            divided into 4 sections. <br />The right one provides space to alert
-            users, and offer them <br />choices about a given threat.
-          </span>
-        </span>
+        </div>
+      </div>
+      <div class="images">
+        <img src="../../assets/threats/dashboard.svg " />
       </div>
     </div>
   </div>
@@ -311,6 +324,7 @@
   <img src="../../assets/threats/overview.png" />
 </div>
 
+<app-back-to-top></app-back-to-top>
 <app-explore-projects
   [firstProject]="'profiles'"
   [secondProject]="'pharm-yarok'"
