--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -20,3 +20,11 @@
     }
   }
 }
+
+@media (max-width: 600px) {
+  .footer {
+    flex-direction: column;
+    align-items: baseline;
+    padding: 2rem 4.5rem;
+  }
+}
