--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,7 +13,7 @@
       class="link underline"
       [class.selected-link]="selectedLink === 'home'"
       (click)="updateSelectedLink('home')"
-      >Home</a
+      >Case Studies</a
     >
     <a
       [href]="aboutUrl"
@@ -27,7 +27,7 @@
       target="_blank"
       class="link underline"
       [class.selected-link]="selectedLink === 'resume'"
-      >Resume</a
+      >CV</a
     >
   </div>
 </div>
