--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -42,6 +42,7 @@
   .header-mobile {
     display: flex;
     justify-content: right;
+    padding: 1.5rem;
 
     .menu {
       width: 100%;
@@ -72,9 +73,9 @@
       }
 
       .contact {
-        margin: 0 4rem;
         border: 1px solid var(--border-color-first);
         border-radius: 0.5rem;
+        line-height: normal;
 
         ::ng-deep.footer {
           gap: 2rem;
