--- a/src/app/scroll-to-top/scroll-to-top.component.scss
+++ b/src/app/scroll-to-top/scroll-to-top.component.scss
@@ -10,3 +10,9 @@
   margin: 0 3.5rem 1.5rem 0;
   cursor: pointer;
 }
+
+@media (max-width: 600px) {
+  .scroll-to-top {
+    visibility: hidden;
+  }
+}
