--- a/src/styles.scss
+++ b/src/styles.scss
@@ -77,3 +77,13 @@ body {
 }
 
 @include paragraph();
+
+@media (max-width: 600px) {
+  .title {
+    font-size: 1.5rem;
+  }
+
+  .section {
+    padding: 0 1.5rem;
+  }
+}
