pharm yarok mobile

--- a/src/app/pharm-yarok/pharm-yarok.component.html
+++ b/src/app/pharm-yarok/pharm-yarok.component.html
@@ -24,7 +24,7 @@
     </div>
   </div>
 
-  <div class="user-story">
+  <!-- <div class="user-story">
     <div class="paragraph-gap-2">
       <img src="../../assets/pharmYarok/userStory1.svg" />
       <span class="text"
@@ -55,7 +55,7 @@
         >Avi got the order, and he's relieved to have his medicine.</span
       >
     </div>
-  </div>
+  </div> -->
 
   <div class="research">
     <div class="paragraph">
@@ -111,14 +111,14 @@
         <span class="card">
           <span class="chip-title-red">Problem</span>
           <span class="content">
-            <span class="text-bold">Limited search:</span>The only supported way
-            of searching is by brand.
+            <span class="text-bold">Limited search: </span>The only supported
+            way of searching is by brand.
           </span>
         </span>
         <span class="card">
           <span class="chip-title-red">Problem</span>
           <span class="content">
-            <span class="text-bold">Missing cart:</span> Unclear what's added
+            <span class="text-bold">Missing cart: </span> Unclear what's added
             after the products page.
           </span>
         </span>
@@ -127,14 +127,14 @@
         <span class="card">
           <span class="chip-title-red">Problem</span>
           <span class="content">
-            <span class="text-bold">Missing sign up:</span> Users have to
+            <span class="text-bold">Missing sign up: </span> Users have to
             reupload their cannabis license.
           </span>
         </span>
         <span class="card">
           <span class="chip-title-red">Problem</span>
           <span class="content">
-            <span class="text-bold">Lack of images:</span> Patients want to see
+            <span class="text-bold">Lack of images: </span> Patients want to see
             what they're buying.
           </span>
         </span>
@@ -142,7 +142,7 @@
     </div>
   </div>
 
-  <div class="personas">
+  <!-- <div class="personas">
     <div class="paragraph-gap-2">
       <span class="title">Personas</span>
       <span>
@@ -222,7 +222,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
 
   <div class="sections">
     <div class="paragraph-gap-2">
@@ -268,47 +268,55 @@
   </div>
 
   <div class="problem-solutions">
-    <div class="para">
-      <div class="headers">
-        <span class="sub-title">Final design</span>
-        <span class="title">Adding products to the cart</span>
-      </div>
-      <div class="paragraph-gap-3">
-        <div class="paragraph-gap-2">
-          <span class="problem text-bold">The problems I addressed were:</span>
-          <span class="para">
-            <span class="paragraph-gap-1">
-              <span class="text-bold">Missing cart:</span> Unclear what's added
-              after the products page.
-            </span>
-            <span class="paragraph-gap-1">
-              <span class="text-bold">Lack of images:</span> Patients want to
-              see what they're buying.
-            </span>
-          </span>
-        </div>
-        <div class="paragraph-gap-2">
-          <span class="solution text-bold">The solutions:</span>
-          <span class="para">
-            <span class="paragraph-gap-1">
-              <span class="text-bold">Adding a cart:</span> to provide clarity &
-              allow users to leave <br />the process and return later without
-              interruption.<br />
-            </span>
-            <span class="paragraph-gap-1">
-              <span class="text-bold">
-                Making POP products more accessible:
-              </span>
-              I added a POP products section to the cart with <br />images and
-              descriptions to boost sales.
-            </span>
-          </span>
-        </div>
-      </div>
+    <div class="headers show-mobile-header">
+      <span class="sub-title">Final design</span>
+      <span class="title">Adding products to the cart</span>
     </div>
-    <div class="images">
-      <div><img src="../../assets/pharmYarok/final2.svg" /></div>
-      <div><img src="../../assets/pharmYarok/final1.svg" /></div>
+    <div class="mobile-order">
+      <div class="para">
+        <div class="headers hide-mobile-header">
+          <span class="sub-title">Final design</span>
+          <span class="title">Adding products to the cart</span>
+        </div>
+        <div class="paragraph-gap-3">
+          <div class="paragraph-gap-2">
+            <span class="problem text-bold"
+              >The problems I addressed were:</span
+            >
+            <span class="para">
+              <span class="paragraph-gap-1">
+                <span class="text-bold">Missing cart:</span> Unclear what's
+                added after the products page.
+              </span>
+              <span class="paragraph-gap-1">
+                <span class="text-bold">Lack of images:</span> Patients want to
+                see what they're buying.
+              </span>
+            </span>
+          </div>
+          <div class="paragraph-gap-2">
+            <span class="solution text-bold">The solutions:</span>
+            <span class="para">
+              <span class="paragraph-gap-1">
+                <span class="text-bold">Adding a cart:</span> to provide clarity
+                & allow users to leave <br />the process and return later
+                without interruption.<br />
+              </span>
+              <span class="paragraph-gap-1">
+                <span class="text-bold">
+                  Making POP products more accessible:
+                </span>
+                I added a POP products section to the cart with <br />images and
+                descriptions to boost sales.
+              </span>
+            </span>
+          </div>
+        </div>
+      </div>
+      <div class="images">
+        <div><img src="../../assets/pharmYarok/final2.svg" /></div>
+        <div><img src="../../assets/pharmYarok/final1.svg" /></div>
+      </div>
     </div>
   </div>
 
@@ -329,47 +337,59 @@
     </div>
   </div>
 
-  <div class="problem-solutions">
-    <div class="images">
-      <div><img src="../../assets/pharmYarok/order1.svg" /></div>
-      <div>
-        <div class="scroll-image">
-          <img class="frame" src="../../assets/pharmYarok/order-frame.png" />
-          <div class="content">
-            <img src="../../assets/pharmYarok/order2.svg" />
+  <div class="problem-solutions order-tracking">
+    <div class="headers show-mobile-header">
+      <span class="title">Order tracking</span>
+    </div>
+    <div class="mobile-order">
+      <div class="para">
+        <div class="headers hide-mobile-header">
+          <span class="title">Order tracking</span>
+        </div>
+        <div class="paragraph-gap-3">
+          <div class="paragraph-gap-2">
+            <span class="problem text-bold"
+              >The problems I addressed were:</span
+            >
+            <span class="para">
+              <span class="paragraph-gap-1">
+                <span class="text-bold"
+                  >Lack of delivery info leading to cancellations:</span
+                >Patients would have to contact the pharmacy to get
+                <br />delivery details, or await contact. most people would
+                <br />get tired waiting and purchase someplace else.
+              </span>
+            </span>
+          </div>
+          <div class="paragraph-gap-2">
+            <span class="solution text-bold">The solutions:</span>
+            <span class="para">
+              <span class="paragraph-gap-1">
+                <span class="text-bold"
+                  >Providing clear feedback & setting expectations:</span
+                >
+                After placing an order, the success page helps inform <br />the
+                patient about the timeline of the order.
+              </span>
+              <span class="paragraph-gap-1">
+                <span class="text-bold"
+                  >Allocating space for order tracking:</span
+                >After placing an order, the info, status and ETA will be
+                <br />visible at the top of the search page.
+              </span>
+            </span>
           </div>
         </div>
       </div>
-    </div>
-    <div class="para">
-      <span class="title">Order tracking</span>
-      <div class="paragraph-gap-3">
-        <div class="paragraph-gap-2">
-          <span class="problem text-bold">The problems I addressed were:</span>
-          <span class="the-problem">
-            <span class="text-bold"
-              >Lack of delivery info leading to cancellations:</span
-            >Patients would have to contact the pharmacy to get <br />delivery
-            details, or await contact. most people would <br />get tired waiting
-            and purchase someplace else.
-          </span>
-        </div>
-        <div class="paragraph-gap-2">
-          <span class="solution text-bold">The solutions:</span>
-          <span class="para">
-            <span class="paragraph-gap-1">
-              <span class="text-bold"
-                >Providing clear feedback & setting expectations:</span
-              >
-              After placing an order, the success page helps inform <br />the
-              patient about the timeline of the order.
-            </span>
-            <span class="paragraph-gap-1">
-              <span class="text-bold">Allocating space for order tracking:</span
-              >After placing an order, the info, status and ETA will be
-              <br />visible at the top of the search page.
-            </span>
-          </span>
+      <div class="images">
+        <div><img src="../../assets/pharmYarok/order1.svg" /></div>
+        <div>
+          <div class="scroll-image">
+            <img class="frame" src="../../assets/pharmYarok/order-frame.png" />
+            <div class="content">
+              <img src="../../assets/pharmYarok/order2.svg" />
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -378,6 +398,7 @@
   <img class="image" src="../../assets/pharmYarok/overview.png" />
 </div>
 
+<app-back-to-top></app-back-to-top>
 <app-explore-projects
   [firstProject]="'profiles'"
   [secondProject]="'threats'"
