--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -33,11 +33,7 @@
 </div>
 
 <div class="header-mobile">
-  <img
-    class="menu-btn"
-    (click)="toggleMenu()"
-    src="../../assets/icons/menu.svg"
-  />
+  <img class="menu-btn" (click)="toggleMenu()" />
   <div class="menu" [ngClass]="_toggleMenu ? 'show' : 'hide'">
     <img
       class="close"
