--- a/src/app/pharm-yarok/pharm-yarok.component.html
+++ b/src/app/pharm-yarok/pharm-yarok.component.html
@@ -1,7 +1,7 @@
 <div class="pharm-yarok">
   <div class="header">
     <app-header class="header"></app-header>
-    <img class="image" src="../../assets/pharmYarok/header.svg" />
+    <img class="image" />
   </div>
 
   <div class="overview">
@@ -395,7 +395,7 @@
     </div>
   </div>
 
-  <img class="image" src="../../assets/pharmYarok/overview.png" />
+  <img class="imag overview-img" />
 </div>
 
 <app-back-to-top></app-back-to-top>
