--- a/src/app/threats/threats.component.html
+++ b/src/app/threats/threats.component.html
@@ -1,7 +1,7 @@
 <div class="threats">
   <div class="header">
     <app-header class="header"></app-header>
-    <img class="image" src="../../assets/threats/home.svg" />
+    <img class="image" />
   </div>
 
   <div class="overview">
@@ -321,7 +321,7 @@
     </span>
   </div>
 
-  <img src="../../assets/threats/overview.png" />
+  <img class="overview-img" />
 </div>
 
 <app-back-to-top></app-back-to-top>
