Add image slider

--- a/src/app/pharm-yarok/pharm-yarok.component.html
+++ b/src/app/pharm-yarok/pharm-yarok.component.html
@@ -24,7 +24,11 @@
     </div>
   </div>
 
-  <!-- <div class="user-story">
+  <div class="user-story show-on-mobile">
+    <app-image-slider [images]="stories"></app-image-slider>
+  </div>
+
+  <div class="user-story hide-on-mobile">
     <div class="paragraph-gap-2">
       <img src="../../assets/pharmYarok/userStory1.svg" />
       <span class="text"
@@ -55,7 +59,7 @@
         >Avi got the order, and he's relieved to have his medicine.</span
       >
     </div>
-  </div> -->
+  </div>
 
   <div class="research">
     <div class="paragraph">
