--- a/src/app/threats/threats.component.scss
+++ b/src/app/threats/threats.component.scss
@@ -324,6 +324,12 @@
       }
     }
 
+    .user-story {
+      padding: 2.5rem 1.5rem;
+      gap: 2.5rem;
+      width: -webkit-fill-available;
+    }
+
     .research-personas {
       gap: 4rem;
     }
