--- a/src/assets/_colors.scss
+++ b/src/assets/_colors.scss
@@ -28,4 +28,7 @@
   --dark-red-background: #3c2d2e;
   --dark-card-background: #272727;
   --dark-green: #2eb891;
+  --dot-color: #434343;
+  --selected-dot-color: #785a9b;
+  --selected-dot-color-py: #51c086;
 }
